@@ -5,7 +5,7 @@ copyright_holder = Robin Smidsrød
 copyright_year   = 2013
 
 ;Semantic versioning, see http://semver.org/
-version = 0.3.0
+version = 0.3.1
 
 [NextRelease]
 [@Git]
@@ -32,7 +32,7 @@ move = README.mkdn
 [PodSyntaxTests]
 [PodCoverageTests]
 [Test::Perl::Critic]
-;[Test::Kwalitee] ; Module::CPANTS::Analyse doesn't work with recent Test::Kwalitee
+[Test::Kwalitee]
 [NoTabsTests]
 [EOLTests]
 
@@ -44,3 +44,8 @@ move = README.mkdn
 ; authordep Pod::Weaver::Section::Support
 ; authordep Pod::Weaver::Plugin::Encoding
 ; authordep Pod::Elemental::Transformer::List
+; authordep Test::Pod::Coverage
+; authordep Pod::Coverage::TrustPod
+; authordep Test::Perl::Critic
+; authordep Perl::Critic::Policy::Miscellanea::RequireRcsKeywords
+; authordep Perl::Critic::Policy::Lax::RequireExplicitPackage::ExceptForPragmata
