@@ -1,0 +1,8 @@
+severity = 4
+
+# These policies we don't use
+[-Miscellanea::RequireRcsKeywords]
+
+# Allows us to set use strict;use warnings before package keyword
+[-Modules::RequireExplicitPackage]
+[Lax::RequireExplicitPackage::ExceptForPragmata]
