@@ -1,6 +1,8 @@
 Revision history for App-GitHubPullRequest
 
 {{$NEXT}}
+    - Changed debug environment variable from PRQ_DEBUG to GIT_PR_DEBUG
+    - Documentation cleanup
 
 0.3.0     2013-03-12 08:47:15 Europe/Oslo
     - Renamed prq to git-pr for git integration (PR#5)
